--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,4 @@ steps:
     azureResourceManagerConnection: 'uamangedidentity'
     subscriptionId: '72d61747-b97c-4857-9cc7-04bf2cdd552f'
     action: 'DeleteRG'
-    resourceGroupName: 'rg-order-dev-neurope-001'
+    resourceGroupName: 'ucdemo_01'
