--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,12 @@ steps:
     subscriptionId: '72d61747-b97c-4857-9cc7-04bf2cdd552f'
     action: 'DeleteRG'
     resourceGroupName: 'ucdemo_01'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'uamangedidentity'
+    scriptType: 'ps'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      az role assignment create --assignee "{assignee}" \
+      --role "User Access Administrator" \
+      --scope "/subscriptions/72d61747-b97c-4857-9cc7-04bf2cdd552f"
