--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,19 +24,13 @@ steps:
       # Write your PowerShell commands here.
       
       Write-Host "Hello World"
-- task: AzureResourceManagerTemplateDeployment@3
-  inputs:
-    deploymentScope: 'Resource Group'
-    azureResourceManagerConnection: 'uamangedidentity'
-    subscriptionId: '72d61747-b97c-4857-9cc7-04bf2cdd552f'
-    action: 'DeleteRG'
-    resourceGroupName: 'ucdemo_01'
+
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'uamangedidentity'
     scriptType: 'ps'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      az role assignment create --assignee "{assignee}" \
+      az role assignment create --assignee "dta-ndev-eun-mi-02" \
       --role "User Access Administrator" \
       --scope "/subscriptions/72d61747-b97c-4857-9cc7-04bf2cdd552f"
