--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,4 @@ steps:
     scriptLocation: 'inlineScript'
     scriptType: pscore
     inlineScript: |
-      az role assignment create --assignee "dta-ndev-eun-mi-02" \
-      --role "User Access Administrator" \
-      --scope "/subscriptions/72d61747-b97c-4857-9cc7-04bf2cdd552f"
+      az role assignment create --assignee "dta-ndev-eun-mi-02" --role "User Access Administrator" --scope "/subscriptions/72d61747-b97c-4857-9cc7-04bf2cdd552f"
